--- a/.gitmodules
+++ b/.gitmodules
@@ -78,5 +78,5 @@
 	branch = px4
 [submodule "src/drivers/ins/cv7/mip_sdk"]
 	path = src/drivers/ins/cv7/mip_sdk
-	url = git@github.com:TeamSenseAI/mip_sdk.git
-	branch = px4_lib
+	url = git@github.com:LORD-MicroStrain/mip_sdk.git
+	branch = feature/px4_compilation
